# mermaid-fixer

./: .gitignore  Cargo.toml  LICENSE  README.md  README_zh.md
docs/: 2、架构概览.md  __Litho_Summary_Brief__.md  __Litho_Summary_Detail__.md
docs/4、深入探索/: AI修复域.md  CLI入口域.md  处理协调域.md  工具支持域.md  文件扫描域.md  语法验证域.md  配置管理域.md
litho.docs/: 1、项目概述.md  2、架构概览.md  3、工作流程.md
litho.docs/4、深入探索/: AI修复域.md  CLI入口域.md  工具支持域.md  文件扫描域.md  语法验证域.md
src/: ai_fixer.rs  cli.rs  config.rs  main.rs  markdown_scanner.rs  mermaid_validator.rs  processor.rs  prompt.tpl  utils.rs
